# multiagents-thinking

./: .gitignore  README.md  pyproject.toml
src/: create_agent.py  multiagents.py
