[project]
name = "multiagents-mcp"
version = "0.1.0"
description = "MCP server for multi-agent thinking using smolagents"
dependencies = [
    "fastmcp>=2.2.3",
    "litellm>=1.67.2",
    "openai>=1.76.0",
    "python-dotenv>=1.1.0",
    "smolagents>=1.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 
